--- a/Modules/Multiple Regression Boxing by Izaan Khudadad/MultipleRegressionBoxingUpdated.ipynb
+++ b/Modules/Multiple Regression Boxing by Izaan Khudadad/MultipleRegressionBoxingUpdated.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "In the following activity, you will use data compiled by Peter Anderson from the Nevada State Athletic Commission(NSAC) and the California State Athletic Commission(CSAC). The dataset covers professional boxing fights held between 2009 and 2017, which includes individual fighters, their opponents, fight characteristics, broadcasting networks, and fighter earnings. \n",
     "\n",
-    "Each observation represents a single fighter in a given bout, forming a panel structure that enables tracking of fighters over time.\n",
+    "Each observation represents a single fighter in a given bout, forming a structure that enables tracking of fighters over time.\n",
     "\n",
     "Using this data, you will work on how various variables are correlated to fighter purse amount, as well as learn about how to determine the quality of a regression model.\n",
     "\n",
@@ -96,9 +96,9 @@
    "id": "afd0aec7",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
-    "In the provided material, students explored how to use multiple linear regression to model Boxing data. By building, evaluating, and interpreting regression models, students practiced core data science skills such as:\n",
-    "- Selecting and preparing predictor variables\n",
+    "### Learning Goals\n",
+    "In this module, students will explore how to use multiple linear regression to model Boxing data. By building, evaluating, and interpreting regression models, students will practice core data science skills such as:\n",
+    "- Selecting and preparing predictor features/variables\n",
     "- Understanding how each predictor influences the response\n",
     "- Evaluating model performance using RMSE\n",
     "- Diagnosing fit using residual plots\n",
@@ -111,6 +111,14 @@
    "metadata": {},
    "source": [
     "## Material"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58ed350f",
+   "metadata": {},
+   "source": [
+    "We will begin by importing some libraries and loading in our data."
    ]
   },
   {
@@ -136,36 +144,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e84fec4f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 4670 entries, 0 to 4669\n",
-      "Data columns (total 12 columns):\n",
-      " #   Column    Non-Null Count  Dtype  \n",
-      "---  ------    --------------  -----  \n",
-      " 0   Boxer     4670 non-null   object \n",
-      " 1   Date      4670 non-null   object \n",
-      " 2   Purse     4670 non-null   float64\n",
-      " 3   lnRPurse  4670 non-null   float64\n",
-      " 4   weight    4670 non-null   float64\n",
-      " 5   Age       4670 non-null   float64\n",
-      " 6   Wins      4670 non-null   int64  \n",
-      " 7   Losses    4670 non-null   int64  \n",
-      " 8   KO        4670 non-null   int64  \n",
-      " 9   W-Title   4670 non-null   int64  \n",
-      " 10  PPV       4670 non-null   int64  \n",
-      " 11  RDS       4670 non-null   int64  \n",
-      "dtypes: float64(4), int64(6), object(2)\n",
-      "memory usage: 437.9+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the data\n",
     "boxing = pd.read_csv(\"https://raw.githubusercontent.com/izaan-khudadad/Boxing_Fighter_Pay/refs/heads/main/Boxing_Pay_data_cleaned.csv\", na_values=['?'])\n",
@@ -190,9 +172,9 @@
    "id": "83e15ff5",
    "metadata": {},
    "source": [
-    "Let's build a multiple regression model predicting lnRPurse (log of fighter earnings) based on several predictors such as Age, Wins, and W-Title.\n",
+    "Let's build a multiple regression model predicting *lnRPurse* (log of fighter earnings) based on several predictors such as *Age*, *Wins*, and *W-Title*.\n",
     "\n",
-    "We use lnRPurse because it makes the data cleaner, the relationships clearer, and the model more accurate. It also helps us talk about relative changes (percentages) instead of absolute dollars, which is often more meaningful.\n"
+    "We use *lnRPurse* because it makes the data cleaner, the relationships clearer, and the model more accurate. Taking a log of the response is a common technique in regression when the data has a wide spread.  It also helps us talk about relative changes (percentages) instead of absolute dollars, which is often more meaningful.\n"
    ]
   },
   {
@@ -764,15 +746,15 @@
     "The coefficient(coef) shows each variable and how they impact the prediction. \n",
     "\n",
     "Variables:\n",
-    "- const: The y-intercept when all variables = 0 → 7.7036\n",
+    "- const: The y-intercept when all variables = 0 is 7.7036\n",
     "\n",
-    "- Age: Each year of age decreases log earnings slightly (-0.0136) → older fighters earn less.\n",
+    "- Age: Each additional year of age is predicted to decrease log earnings slightly (-0.0136) as older fighters earn less assuming the other predictors remain fixed.\n",
     "\n",
-    "- Wins: Each win adds 0.0837 to log earnings → winning increases purse.\n",
+    "- Wins: Each additional win is predicted to add 0.0837 to log earnings as winning increases purse with the other predictors held fixed.\n",
     "\n",
-    "- KO: Each knockout adds 0.019 → smaller effect than wins but still positive.\n",
+    "- KO: Each knockout is predicted to add 0.019 to log earnings with the other predictors held fixed.\n",
     "\n",
-    "- W-Title: Having a world title adds 1.96, a major boost to earnings."
+    "- W-Title: Having a world title is predicted to add 1.96 to log earnings assuming other predictors remain the same."
    ]
   },
   {
@@ -788,7 +770,7 @@
     "\n",
     "Residual=Actual Value−Predicted Value\n",
     "\n",
-    "A residual plot shows prediction errors. Ideally, they should be randomly scattered, which indicates the model fits well."
+    "A residual plot shows prediction errors. Ideally, they should be randomly scattered, which indicates the model fits well.  Randomly scattered here means that the residuals have the same mean (zero) and the same variability as the predicted values change."
    ]
   },
   {
@@ -829,7 +811,21 @@
     "The red line is called the zero-residual line. It shows where the model's predictions are exactly correct - meaning the predicted value perfectly matches the actual value. \n",
     "\n",
     "This residual plot shows some evidence of non-constant variance - the residuals fan out as predicted earnings increase.\n",
-    "This suggests the model may be less accurate for high earners, and that the assumption of equal variance is not fully met."
+    "This suggests the model may be less accurate for high earners, and that the assumption of equal variance is not fully met.  Not every regression that model that we fit will be appropriate to use for prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "665b25cc",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "In the provided material, students explored how to use multiple linear regression to model Boxing data. By building, evaluating, and interpreting regression models, students practiced core data science skills such as:\n",
+    "- Selecting and preparing predictor variables\n",
+    "- Understanding how each predictor influences the response\n",
+    "- Evaluating model performance using RMSE\n",
+    "- Diagnosing fit using residual plots\n",
+    "- Reading and interpreting a full regression summary"
    ]
   },
   {
