--- a/Modules/Pandas Module by Austin Hayes/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data - ANSWER KEY.ipynb
+++ b/Modules/Pandas Module by Austin Hayes/Learning the Basics of Pandas in Python Using 2024 MLB Team Batting Data - ANSWER KEY.ipynb
@@ -23,7 +23,7 @@
     "  - Dataframes\n",
     "  - Summary statistics\n",
     "  - Importing and Reading data\n",
-    "  - Series\n",
+    "  - Data Filtering\n",
     "  - Data Science\n",
     "\n",
     "\n",
@@ -191,7 +191,7 @@
    "id": "c0d71af1",
    "metadata": {},
    "source": [
-    "### 4. Create your own dataframe with at least 10 rows and 3 columns. Include at least 3 rows with null data points (Use np.nan) and make at least 1 column of numbers."
+    "### 4. Create your own Dataframe with at least 10 rows and 3 columns. Include at least 3 rows with null data points (Use np.nan) and make at least 1 column of numbers."
    ]
   },
   {
@@ -221,7 +221,7 @@
    "id": "c1740bb4",
    "metadata": {},
    "source": [
-    "### 5. Using the dataframe you created in the last question, fill those null values with a phrase of your choosing and print out the dataframe. Make sure you are NOT applying those changes to the original dataframe.\n",
+    "### 5. Using the Dataframe you created in the last question, fill those null values with a phrase of your choosing and print out the Dataframe. Make sure you are NOT applying those changes to the original Dataframe.\n",
     "\n",
     "Hint: do not use the inplace argument in you function call"
    ]
@@ -245,7 +245,7 @@
    "id": "8674da83",
    "metadata": {},
    "source": [
-    "### 6. Still using that dataframe you created, drop any rows that conatain null values. This time, make sure you apply those changes to your dataframe and NOT to a temporary copy. \n"
+    "### 6. Still using that Dataframe you created, drop any rows that contain null values. This time, make sure you apply those changes to your Dataframe and NOT to a temporary copy. \n"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "id": "6cee5f56",
    "metadata": {},
    "source": [
-    "### 7. Using one function, calculate all key statisitics for your dataframe such as mean, median, min, etc."
+    "### 7. Using one function, calculate all key statistics for your Dataframe such as mean, median, min, etc."
    ]
   },
   {
@@ -286,7 +286,7 @@
    "id": "a9420c77",
    "metadata": {},
    "source": [
-    "### 8. View the last 5 rows of your dataframe and drop 3 of them of your choosing with only one line of code. View the last 5 rows again to check your changes."
+    "### 8. View the last 5 rows of your Dataframe and drop 3 of them (of your choosing) with only one line of code. View the last 5 rows again to check your changes."
    ]
   },
   {
