Updating Seaborn module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Untitled-1.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Untitled-1.ipynb
@@ -42,13 +42,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4ad8d90",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Learning Goals:\n",
+    "\n",
+    "\n",
+    "- Learn about the use of the Seaborn library\n",
+    "- Create vizualizations from the Seaborn library\n",
+    "- Interpret findings from vizualizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baa1ae52",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Introduction:\n",
+    "\n",
+    "This SCORE module will be an introduction to vizualizations and the Seaborn library in Python. We will go over some of the basic items needed to use Python and Seaborn throughout this module. \n",
+    "\n",
+    "Some of the Topics we will be discussing: \n",
+    "\n",
+    "- Interpreting findings\n",
+    "- Summary statistics\n",
+    "- Importing and reading data\n",
+    "- Visualizations\n",
+    "- Data Science\n",
+    "- Seaborn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21523829",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "# Getting Started\n",
+    "\n",
+    "Before we get started let's import pandas so we can read in our data. We also want to import Seaborn so we can start making our vizualizations.\n",
+    "\n",
+    "NOTE: If one of the import statements does not work, you may need to download the library(s). Visit one of the links below for more information on dowloading them.\n",
+    "\n",
+    "Pandas: https://pandas.pydata.org/docs/getting_started/install.html \n",
+    "\n",
+    "Seaborn: https://seaborn.pydata.org/installing.html\n",
+    "\n",
+    "Numpy: https://numpy.org/install/\n",
+    "\n",
+    "Now, lets import our libraries:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "2f95a6df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "# Import pandas library\n",
+    "# This library is used for data manipulation and analysis\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Import numpy library\n",
+    "# This library is used for numerical operations\n",
+    "import numpy as np  \n",
+    "\n",
+    "# Import Seaborn library\n",
+    "# This library is used for statistical data visualization\n",
+    "import seaborn as sns"
    ]
   },
   {
