--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -296,7 +296,7 @@
    "id": "e347b9a1",
    "metadata": {},
    "source": [
-    "As expected, this graph generally shows a positive trend over time. The more minutes a player has, they more likely to have a higher number of possesions with the ball. \n",
+    "As expected, this graph generally shows a positive trend over time. When a player has more time in game, it make sense that they have had a higher number of possesions of the ball. \n",
     "\n",
     "Again, let's interpret this:\n",
     "\n"
