--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -647,6 +647,16 @@
     "\n",
     "# Heatmap"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3048033b",
+   "metadata": {},
+   "source": [
+    "Seaborn is an extremely powerful statistical vizualization library and there is a lot more that these graphs have the capability to do. \n",
+    "\n",
+    "For code examples and further graph customizations visit the Seaborn website here: https://seaborn.pydata.org/examples/index.html"
+   ]
   }
  ],
  "metadata": {
