Updating the Seaborn Module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -655,7 +655,7 @@
    "source": [
     "Seaborn is an extremely powerful statistical vizualization library and there is a lot more that these graphs have the capability to do. \n",
     "\n",
-    "For code examples and further graph customizations visit the Seaborn website here: https://seaborn.pydata.org/examples/index.html"
+    "For code examples and further graph customization options visit the Seaborn website here: https://seaborn.pydata.org/examples/index.html"
    ]
   }
  ],
