Update to the Seaborn Module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -1156,6 +1156,46 @@
    "cell_type": "markdown",
    "id": "a206a81c",
    "metadata": {},
+   "source": [
+    "### 3. Make a barplot that allows you to make compare the total amoung of red cards each team has. What team has the most red cards?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c6d219",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eda2bdb",
+   "metadata": {},
+   "source": [
+    "### 4. In one to two sentence(s), what is the MAIN difference between a boxplot and a violinplot?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4dc0ec5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a8c68c2",
+   "metadata": {},
+   "source": [
+    "### 5. Make a histogram and a boxplot to explore the distribution of offside penalties. What does the distribution look like? Is it skewed left or right? Or is it a normal distribution?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f86e1de",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
