Update to the Seaborn Module

--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -53,7 +53,8 @@
     "\n",
     "- Learn about the use of the Seaborn library\n",
     "- Create vizualizations from the Seaborn library\n",
-    "- Interpret findings from vizualizations"
+    "- Interpret findings from vizualizations\n",
+    "- Learn about customizing vizualizations with Matplotlib"
    ]
   },
   {
