--- a/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
+++ b/Modules/Intro to SQL with Rugby by Izaan Khudadad/Intro to SQL.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "4fd183af",
+   "metadata": {},
+   "source": [
+    "Schuckers Comments 7 July 25\n",
+    "+ Need an introduction to Rugby and something about its scoring.\n",
+    "+ Your first query is quite extensive, maybe start with a couple of simpler queries that only use a single keyword.\n",
+    "+ Also explain the text of the query and what is happening with the syntax: query = \"\"\" \"\"\"  pd.read_sql_query(query, conn)\n",
+    "+ In the Activity section, again start with a very simple query to build confidence, something like find all the matches played in 'Scotland', then build to more complicated queries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df88582d",
    "metadata": {},
    "source": [
