--- a/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
+++ b/Modules/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes/Seaborn and Basic visualizations in Python Using English Premier League data by Austin Hayes.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "fc54ad5b",
+   "metadata": {},
+   "source": [
+    "Schuckers Comments 7 July 2025\n",
+    "+ Is there a weak positive relationship between Assists and Crosses?\n",
+    "+ Usually, we use lineplots to look at data over time.  Not sure this is the best usage of that.  I'd drop it unless there is a time variable in the data\n",
+    "+ Maybe replace the above with a scatterplot of time vs minutes as another example of a scatterplot to describe.\n",
+    "+ Maybe add a data glossary which is typical for a SCORE Module.  For example, see the Variable descriptions for this module: https://iramler.github.io/slu_score_preprints/disc_golf/dgpt_correlations/\n",
+    "+ See the code that I put for the Learning Goals section below\n",
+    "+ In a paragraph, spell out numbers less than 15.\n",
+    "+ Let's take out the trendline for histograms, that's a bit much for this level.\n",
+    "+ Can we find another distribution that is not skewed right to illustrate.  \n",
+    "+ I think we can drop countplot or merge with barplot\n",
+    "+ How can there be negative offside penalties (violin plot by position)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b17b4d7",
    "metadata": {},
    "source": [
@@ -50,11 +68,16 @@
     "\n",
     "# Learning Goals:\n",
     "\n",
+    "<details><summary>Learning Goals</summary>\n",
+    "<p>\n",
     "\n",
     "- Learn about the use of the Seaborn library\n",
     "- Create vizualizations from the Seaborn library\n",
     "- Interpret findings from vizualizations\n",
-    "- Learn about customizing vizualizations with Matplotlib"
+    "- Learn about customizing vizualizations with Matplotlib\n",
+    "\n",
+    "</p>\n",
+    "</details>\n"
    ]
   },
   {
@@ -89,7 +112,7 @@
     "\n",
     "Before we get started let's import pandas so we can read in our data. We also want to import Seaborn so we can start making our vizualizations.\n",
     "\n",
-    "NOTE: If one of the import statements does not work, you may need to download the library(s). Visit one of the links below for more information on dowloading them.\n",
+    "NOTE: If one of the import statements does not work, you may need to download the library(s). Visit one of the links below for more information on downloading them.\n",
     "\n",
     "Pandas: https://pandas.pydata.org/docs/getting_started/install.html \n",
     "\n",
@@ -104,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2f95a6df",
    "metadata": {},
    "outputs": [],
@@ -136,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "87c569d2",
    "metadata": {},
    "outputs": [],
@@ -162,7 +185,7 @@
    "id": "6cf5a6a0",
    "metadata": {},
    "source": [
-    "A scatterplot is a useful graph that displays the relationship between 2 numerical variables. Scatterplots are powerful in that they provide a visual for correlation analysis between different measures. \n",
+    "A scatterplot is a useful graph that displays the relationship between two numerical variables. Scatterplots are powerful in that they provide a visual for understanding the relationshiop  between two different measures. \n",
     "\n",
     "For example, let's say that we want to explore the relationship between succesful crosses and assists.\n",
     "\n",
@@ -171,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "478d7a96",
    "metadata": {},
    "outputs": [
@@ -221,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "020fa285",
    "metadata": {},
    "outputs": [
@@ -290,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "4f978079",
    "metadata": {},
    "outputs": [
@@ -344,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8975961a",
    "metadata": {},
    "outputs": [
@@ -397,7 +420,7 @@
     "\n",
     "# Barplots\n",
     "\n",
-    "Barplots are different from the first two graphs we have gone over. Instead of analyzing 2 numerical variables, we are analyzing 1 numerical variable and a categorical variable. This is a very important graph to use because it allows you to easily compare different categories against one another. \n",
+    "Barplots are different from the first two graphs we have gone over. Instead of analyzing two numerical variables, we are analyzing one numerical variable and a categorical variable. This is a very important graph to use because it allows you to easily compare different categories against one another. \n",
     "\n",
     "For example, lets take a look at the number of goals per position."
    ]
@@ -418,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "ba0c4519",
    "metadata": {},
    "outputs": [
@@ -543,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a089b5bf",
    "metadata": {},
    "outputs": [
@@ -578,7 +601,7 @@
    "id": "31dfb08a",
    "metadata": {},
    "source": [
-    "Looks like Midfielders scored the vast majority of goals during the 2024 - 2025 season!"
+    "Looks like Midfielders scored the most goals during the 2024 - 2025 season!"
    ]
   },
   {
@@ -598,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e6e6a500",
    "metadata": {},
    "outputs": [
@@ -642,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "c3f6ca8f",
    "metadata": {},
    "outputs": [
@@ -677,7 +700,7 @@
    "id": "5767e06a",
    "metadata": {},
    "source": [
-    "After taking a closer look at the graph, most players have a very small amount of assists. We also notice that the majority of the distribution lies on the right side of the graph. We call this a skewed right distribution. If the histogram was flipped around, it would be called a skewed left distribution. If the data was evenly distributed amongst points, it would be called a uniform distribtion. Finally, if the data appears bell-shaped with the majority of the data being located in the middle and tapering off to the left and right, we would call that a normal distribution."
+    "After taking a closer look at the graph, most players have a very small amount of assists. We also notice that the majority of the distribution lies on the left side of the graph. We call this a skewed right distribution. If the histogram was flipped around, it would be called a skewed left distribution. If the data was evenly distributed amongst points, it would be called a uniform distribtion. Finally, if the data appears bell-shaped with the majority of the data being located in the middle and tapering off to the left and right, we would call that a normal distribution."
    ]
   },
   {
@@ -711,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "48e9ffee",
    "metadata": {},
    "outputs": [
@@ -758,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ab3d5f6b",
    "metadata": {},
    "outputs": [
@@ -821,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a346678a",
    "metadata": {},
    "outputs": [
@@ -863,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4ebf0fd7",
    "metadata": {},
    "outputs": [
@@ -945,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7207ca2b",
    "metadata": {},
    "outputs": [
@@ -1005,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "bda0ea1d",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "a84b3228",
    "metadata": {},
    "outputs": [
