--- a/Modules/Intro to SQL with Rugby by Izaan Khudadad/IntroToSQLSolutions.ipynb
+++ b/Modules/Intro to SQL with Rugby by Izaan Khudadad/IntroToSQLSolutions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4318f81a",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "2783"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,12 +42,12 @@
    "id": "631aec1d",
    "metadata": {},
    "source": [
-    "1. Which countries have hosted the most rugby matches?"
+    "1. Write a SQL query to list the away_team and home_score where matches that were played in Scotland."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "0196191a",
    "metadata": {},
    "outputs": [
@@ -72,90 +72,89 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
-       "      <th>num_matches</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>England</td>\n",
-       "      <td>395</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Wales</td>\n",
-       "      <td>361</td>\n",
+       "      <td>England</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>France</td>\n",
-       "      <td>349</td>\n",
+       "      <td>England</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Ireland</td>\n",
-       "      <td>344</td>\n",
+       "      <td>England</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>343</td>\n",
+       "      <td>England</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>271</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>New Zealand</td>\n",
-       "      <td>249</td>\n",
+       "      <td>England</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>209</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>126</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Italy</td>\n",
-       "      <td>115</td>\n",
+       "      <td>England</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        country  num_matches\n",
-       "0       England          395\n",
-       "1         Wales          361\n",
-       "2        France          349\n",
-       "3       Ireland          344\n",
-       "4      Scotland          343\n",
-       "5     Australia          271\n",
-       "6   New Zealand          249\n",
-       "7  South Africa          209\n",
-       "8     Argentina          126\n",
-       "9         Italy          115"
+       "  away_team  home_score\n",
+       "0   England           1\n",
+       "1   England           0\n",
+       "2   England           0\n",
+       "3   England           1\n",
+       "4   England           1\n",
+       "5   Ireland           3\n",
+       "6   England           1\n",
+       "7   Ireland           1\n",
+       "8     Wales           3\n",
+       "9   England           0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"\"\"\n",
-    "SELECT country, COUNT(*) AS num_matches\n",
+    "SELECT away_team, home_score\n",
     "FROM matches\n",
-    "GROUP BY country\n",
-    "ORDER BY num_matches DESC\n",
+    "WHERE country = 'Scotland'\n",
     "LIMIT 10;\n",
     "\"\"\"\n",
     "pd.read_sql_query(query, conn)"
@@ -171,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8e18d609",
    "metadata": {},
    "outputs": [
@@ -213,7 +212,7 @@
        "0        43.306122"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,16 +228,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6245de9e",
+   "id": "34cef8cc",
    "metadata": {},
    "source": [
-    "4. Which home team has the highest average winning margin?"
+    "3. List the date, home_team, away_team, and total_points for matches played in France. Limit to 15 matches."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "73916f96",
+   "execution_count": 14,
+   "id": "44011120",
    "metadata": {},
    "outputs": [
     {
@@ -262,91 +261,152 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>date</th>\n",
        "      <th>home_team</th>\n",
-       "      <th>avg_margin</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>total_points</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1906-01-01</td>\n",
+       "      <td>France</td>\n",
        "      <td>New Zealand</td>\n",
-       "      <td>15.631179</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>9.274038</td>\n",
+       "      <td>1906-03-22</td>\n",
+       "      <td>France</td>\n",
+       "      <td>England</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>1908-01-01</td>\n",
+       "      <td>France</td>\n",
        "      <td>England</td>\n",
-       "      <td>5.717949</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>4.425856</td>\n",
+       "      <td>1909-02-23</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>1910-03-03</td>\n",
        "      <td>France</td>\n",
-       "      <td>3.836310</td>\n",
+       "      <td>England</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>1910-03-28</td>\n",
+       "      <td>France</td>\n",
        "      <td>Ireland</td>\n",
-       "      <td>2.422535</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Wales</td>\n",
-       "      <td>1.989071</td>\n",
+       "      <td>1911-01-02</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Scotland</td>\n",
-       "      <td>-0.913043</td>\n",
+       "      <td>1911-02-28</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>-7.878571</td>\n",
+       "      <td>1912-01-01</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Italy</td>\n",
-       "      <td>-17.717949</td>\n",
+       "      <td>1912-04-08</td>\n",
+       "      <td>France</td>\n",
+       "      <td>England</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1913-01-01</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Scotland</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1913-01-11</td>\n",
+       "      <td>France</td>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1913-02-27</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1914-01-01</td>\n",
+       "      <td>France</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1914-04-13</td>\n",
+       "      <td>France</td>\n",
+       "      <td>England</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      home_team  avg_margin\n",
-       "0   New Zealand   15.631179\n",
-       "1  South Africa    9.274038\n",
-       "2       England    5.717949\n",
-       "3     Australia    4.425856\n",
-       "4        France    3.836310\n",
-       "5       Ireland    2.422535\n",
-       "6         Wales    1.989071\n",
-       "7      Scotland   -0.913043\n",
-       "8     Argentina   -7.878571\n",
-       "9         Italy  -17.717949"
+       "          date home_team     away_team  total_points\n",
+       "0   1906-01-01    France   New Zealand            46\n",
+       "1   1906-03-22    France       England            43\n",
+       "2   1908-01-01    France       England            19\n",
+       "3   1909-02-23    France         Wales            52\n",
+       "4   1910-03-03    France       England            14\n",
+       "5   1910-03-28    France       Ireland            11\n",
+       "6   1911-01-02    France      Scotland            31\n",
+       "7   1911-02-28    France         Wales            15\n",
+       "8   1912-01-01    France       Ireland            17\n",
+       "9   1912-04-08    France       England            26\n",
+       "10  1913-01-01    France      Scotland            24\n",
+       "11  1913-01-11    France  South Africa            43\n",
+       "12  1913-02-27    France         Wales            19\n",
+       "13  1914-01-01    France       Ireland            14\n",
+       "14  1914-04-13    France       England            52"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "query = \"\"\"\n",
-    "SELECT home_team, AVG(home_score - away_score) AS avg_margin\n",
+    "SELECT date, home_team, away_team, home_score + away_score AS total_points\n",
     "FROM matches\n",
-    "GROUP BY home_team\n",
-    "ORDER BY avg_margin DESC\n",
-    "LIMIT 10;\n",
+    "WHERE country = 'France'\n",
+    "LIMIT 15;\n",
     "\"\"\"\n",
     "pd.read_sql_query(query, conn)\n"
    ]
@@ -356,12 +416,12 @@
    "id": "43ae916f",
    "metadata": {},
    "source": [
-    "5. List all matches played on neutral sites (sample of 5)"
+    "4. List all matches played on neutral sites (sample of 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "90b39e4d",
    "metadata": {},
    "outputs": [
@@ -453,7 +513,7 @@
        "4  1987-06-08    England     Wales           3          16    Australia"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
